chandeliers-lus/tests/compile_fail/ui/tc/shadow.rs
chandeliers_lus::decl! {
    const X : int = 0;
    node test() returns (X : bool);
    let X = 0; tel
}

fn main() {}
